CSS_files/index.css
html, body{
  height: 100%;
  width: 100%;
  margin: 0px;
  padding: 0px;
  overflow: hidden;
}
nav{
  position: absolute;
  display: flex;
  width: 98%;
  justify-content: space-around;
  align-items: center;
  min-height: 8vh;
  top:1%;
  left: 1%;
  right: 1%;
  font-family: 'Poppins', sans-serif;
  filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0,0,0,0.5));
  z-index: 100;
}
.glass_effect{
  background: linear-gradient(135deg, rgba(255,255,255,0.1), rgba(255,255,255,0));
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  border-radius: 20px;
  border: 1px solid rgba(255,255,255,0.18);
  box-shadow: 0 8px 32px 0 rgba(0,0,0,0.37);
}
.logo{
  color: rgb(226,226,226);
  text-transform: uppercase;
  letter-spacing: 5px;
  font-size: 20px;
}
.logo a{
  text-decoration: none;
  color: rgb(226, 226, 226);
}
.nav-links{
  display: flex;
  justify-content: space-around;
  width: 30%;
  z-index: 101;
}
.nav-links li{
  list-style: none;
}
.nav-links a{
  color: rgb(226,226,226);
  text-decoration: none;
  letter-spacing: 3px;
  font-weight: bold;
  font-size: 14px;
}
.burger{
  display: none;
  cursor: pointer;
}
.burger div{
  width: 25px;
  height: 3px;
  background-color: rgb(226,226,226);
  margin: 5px;
  transition: all 0.3s ease;
}
@media screen and (max-width:500px){
  body{
    overflow-x: hidden;
  }
  .nav-links{
    position: absolute;
    right: 0px;
    height: 90vh;
    top: 8vh;
    background-color: #292929;
    flex-direction: column;
    align-items: center;
    width: 0%;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
    filter: drop-shadow(0rem 1rem 0.5rem rgba(0,0,0,0.5));
  }
  .nav-links li{
    opacity: 0;
  }
  .burger{
    display: block;
  }
}
@media screen and (max-width:400px){
  body{
    overflow-x: hidden;
  }
  .nav-links{
    position: absolute;
    right: 0px;
    height: 90vh;
    top: 8vh;
    background-color: #292929;
    flex-direction: column;
    align-items: center;
    width: 0%;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
    filter: drop-shadow(0rem 1rem 0.5rem rgba(0,0,0,0.5));
  }
  .nav-links li{
    opacity: 0;
  }
  .burger{
    display: block;
  }
}
@media screen and (max-width:300px){
  body{
    overflow-x: hidden;
  }
  .nav-links{
    position: absolute;
    right: 0px;
    height: 90vh;
    top: 8vh;
    background-color: #292929;
    flex-direction: column;
    align-items: center;
    width: 0%;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
    filter: drop-shadow(0rem 1rem 0.5rem rgba(0,0,0,0.5));
  }
  .nav-links li{
    opacity: 0;
  }
  .burger{
    display: block;
  }
}
.nav-active{
  transform: translateX(0%);
  width: 50%;
}
@keyframes navLinkFade{
  from{
    opacity: 0;
    transform: translateX(50px);
  }
  to{
    opacity: 1;
    transform: translateX(0px);
  }
}
.toggle .line1{
  transform: rotate(-45deg) translate(-5px,6px);
}
.toggle .line2{
  opacity: 0;
}
.toggle .line3{
  transform: rotate(45deg) translate(-5px,-6px); 
}
@keyframes slide {
  0% {
    transform:translateX(-25%);
  }
  100% {
    transform:translateX(25%);
  }
}
.background{
  width: 100%;
  height: 100%;
  z-index: -1;
}
.background_video{
  width: 100%;
  height: 100%;
  object-fit: cover;
}

